Added variable use examples

--- a/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
@@ -13,51 +13,53 @@
 <h1>
 External tools</h1>
 
-<div CLASS="Para">External tools allow you to configure and run programs,
+<p>External tools allow you to configure and run programs,
 batch files, Ant build files, and so on, using the Workbench. You can save
-these external tool configurations and run them at a later time.</div>
+these external tool configurations and run them at a later time.</p>
 
+<p>Output from external tools is displayed in the log console
+view.</p>
 
-<p CLASS="Para">Output from external tools is displayed in the log console
-view.
-
-<p CLASS="Para">You can add external tools as part of the build process
+<p>You can add external tools as part of the build process
 for a project. These external tools will run in the specified order every
-time a project is built.
+time a project is built.</p>
 
-<p CLASS="Para">The following variables are available when you configure
+<p>The following variables are available when you configure
 an external tool. These variables are automatically expanded each time
-the external tool is run.
+the external tool is run.</p>
+
 <blockquote>
-<div CLASS="Para"><b>${workspace_loc}</b> - The absolute path on the system's
-hard drive to Eclipse's workspace directory.</div>
+<p><b>${workspace_loc}</b> - The absolute path on the system's
+hard drive to Eclipse's workspace directory.</p>
 
-
-<p CLASS="Para"><b>${workspace_loc:<i>&lt;resource path></i>}</b> - The
+<p><b>${workspace_loc:<i>&lt;resource path></i>}</b> - The
 absolute path on the system's hard drive to the specified resource. The
-<i>&lt;resource path></i> is the full path of the resource relative to
-the workspace root. For example ${workspace_loc:/MyProject/MyFile.txt}.
-Note that the expanded result of this variable is not the same as ${workspace_loc}/MyProject/MyFile.txt
+<i>&lt;resource
+path></i> is the full path of the resource relative to the workspace root.
+For example ${workspace_loc:/MyProject/MyFile.txt}. Note that the expanded
+result of this variable is not the same as ${workspace_loc}/MyProject/MyFile.txt
 if the project's contents directory for MyProject is outside the workspace
-directory.
+directory.</p>
 
-<p CLASS="Para"><b>${project_loc}</b> - The absolute path on the system's
+<p><b>${project_loc}</b> - The absolute path on the system's
 hard drive to the currently selected resource's project or to the project
-being built if the external tool is run as part of a build.
+being built if the external tool is run as part of a build.</p>
 
-<p CLASS="Para"><b>${project_loc:<i>&lt;resource path></i>}</b> - The absolute
-path on the system's hard drive to the specified resource's project. The
-<i>&lt;resource path></i> is the full path of the resource relative to
-the workspace root. For example ${workspace_loc:/MyProject/MyFile.txt}.
+<p><b>${project_loc:<i>&lt;resource path></i>}</b> - The
+absolute path on the system's hard drive to the specified resource's project.
+The
+<i>&lt;resource path></i> is the full path of the resource relative
+to the workspace root. For example ${workspace_loc:/MyProject/MyFile.txt}.
 Note that the expanded result of this variable is not the same as ${workspace_loc}/MyProject
 if the project's contents directory for MyProject is outside the workspace
-directory.
+directory.</p>
 
-<p CLASS="Para"><b>${container_loc}</b> - The absolute path on the system's
+<p><b>${container_loc}</b> - The absolute path on the system's
 hard drive to the currently selected resource's parent (either a folder
-or project).
+or project).</p>
 
-<p CLASS="Para"><b>${container_loc:<i>&lt;resource path></i>}</b> - The
+
+<p><b>${container_loc:<i>&lt;resource path></i>}</b> - The
 absolute path on the system's hard drive to the specified resource's parent
 (either a folder or project). The <i>&lt;resource path></i> is the full
 path of the resource relative to the workspace root. For example ${workspace_loc:/MyProject/MyFolder/MyFile.txt}.
@@ -65,46 +67,154 @@ Note that the expanded result of this variable is not the same as ${workspace_lo
 if the project's contents directory for MyProject is outside the workspace
 directory.
 
-<p CLASS="Para"><b>${resource_loc}</b> - The absolute path on the system's
+<p><b>${resource_loc}</b> - The absolute path on the system's
 hard drive to the currently selected resource.
 
-<p CLASS="Para"><b>${resource_loc:<i>&lt;resource path></i>}</b> - The
+<p><b>${resource_loc:<i>&lt;resource path></i>}</b> - The
 absolute path on the system's hard drive to the specified resource. The
-<i>&lt;resource path></i> is the full path of the resource relative to
-the workspace root. For example ${workspace_loc:/MyProject/MyFile.txt}.
-Note that the expanded result of this variable is not the same as ${workspace_loc}/MyProject/MyFile.txt
+<i>&lt;resource
+path></i> is the full path of the resource relative to the workspace root.
+For example ${workspace_loc:/MyProject/MyFile.txt}. Note that the expanded
+result of this variable is not the same as ${workspace_loc}/MyProject/MyFile.txt
 if the project's contents directory for MyProject is outside the workspace
 directory.
 
-<p CLASS="Para"><b>${project_path}</b> - The full path, relative to the
+<p><b>${project_path}</b> - The full path, relative to the
 workspace root, of the currently selected resource's project or of the
 project being built if the external tool is run as part of a build.
 
-<p CLASS="Para"><b>${container_path}</b> - The full path, relative to the
+<p><b>${container_path}</b> - The full path, relative to the
 workspace root, of the currently selected resource's parent (either a folder
 or project).
 
-<p CLASS="Para"><b>${resource_path}</b> - The full path, relative to the
+<p><b>${resource_path}</b> - The full path, relative to the
 workspace root, of the currently selected resource.
 
-<p CLASS="Para"><b>${project_name}</b> - The name of the currently selected
+<p><b>${project_name}</b> - The name of the currently selected
 resource's project or of the project being built if the external tool is
 run as part of a build.
 
-<p CLASS="Para"><b>${container_name}</b> - The name of the currently selected
+<p><b>${container_name}</b> - The name of the currently selected
 resource's parent (either a folder or project).
 
-<p CLASS="Para"><b>${resource_name}</b> - The name of the currently selected
+<p><b>${resource_name}</b> - The name of the currently selected
 resource.
 
-<p CLASS="Para"><b>${build_type}</b> - The kind of build when the external
+<p><b>${build_type}</b> - The kind of build when the external
 tool is run as part of a build. The value can be one of "full", "incremental",
 or "auto". If the external tool is run outside of a build, the value is
 then "none".
 
-<p CLASS="Para"><b>${ant_target:&lt;target name>}</b> - The name of a target
+<p><b>${ant_target:&lt;target name>}</b> - The name of a target
 in an Ant build file to perform.</blockquote>
-<img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+
+<p>Lets assume your Eclipse workspace directory is c:\eclipse\workspace
+and you have two projects MyProject1 and MyProject2. The first project,
+MyProject1, is located inside the workspace directory, the second project,
+MyProject2, is located outside the workspace directory at c:\projects\MyProject2.
+Lets look at how the variable examples below will be expanded to when an
+external tool is run, if the resource /MyProject2/MyFolder/MyFile.txt is
+selected.
+<br>&nbsp;
+<br>&nbsp;
+<center><table BORDER WIDTH="80%" >
+<tr>
+<td>
+<center><b>Variable Examples</b></center>
+</td>
+
+<td>
+<center><b>Expanded Results</b></center>
+</td>
+</tr>
+
+<tr>
+<td>${workspace_loc}</td>
+
+<td>c:\eclipse\workspace</td>
+</tr>
+
+<tr>
+<td>${workspace_loc:/MyProject1/MyFile.txt}</td>
+
+<td>c:\eclipse\workspace\MyProject\MyFile.txt</td>
+</tr>
+
+<tr>
+<td>${workspace_loc:/MyProject2/MyFile.txt}</td>
+
+<td>c:\projects\MyProject2\MyFile.txt</td>
+</tr>
+
+<tr>
+<td>${project_loc}</td>
+
+<td>c:\projects\MyProject2</td>
+</tr>
+
+<tr>
+<td>${project_loc:/MyProject1/MyFile.txt}</td>
+
+<td>c:\eclipse\workspace\MyProject</td>
+</tr>
+
+<tr>
+<td>${container_loc}</td>
+
+<td>c:\projects\MyProject2\MyFolder</td>
+</tr>
+
+<tr>
+<td>${resource_loc}</td>
+
+<td>c:\projects\MyProject2\MyFile.txt</td>
+</tr>
+
+<tr>
+<td>${project_path}</td>
+
+<td>/MyProject2</td>
+</tr>
+
+<tr>
+<td>${container_path}</td>
+
+<td>/MyProject2/MyFolder</td>
+</tr>
+
+<tr>
+<td>${resource_path}</td>
+
+<td>/MyProject2/MyFolder/MyFile.txt</td>
+</tr>
+
+<tr>
+<td>${project_name}</td>
+
+<td>MyProject2</td>
+</tr>
+
+<tr>
+<td>${container_name}</td>
+
+<td>MyFolder</td>
+</tr>
+
+<tr>
+<td>${resource_name}</td>
+
+<td>MyFile.txt</td>
+</tr>
+
+<tr>
+<td>${build_type}</td>
+
+<td>none</td>
+</tr>
+</table></center>
+</p>
+
+<p><br><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
 <br><a href="cantsup.htm">Ant support</a>
 <br><a href="concepts-22.htm">Builds</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 >
