[TB] removed duplicate pic

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
@@ -16,8 +16,7 @@
   <li>You can drag and drop an element over the the  Hierarchy view to focus 
     it on that element.</li>
   <li>You can change the orientation (from the default vertical to horizontal) 
-    of the Hierarchy view by using the Menu toolbar button.<br>
-    <img src=" ../ngibmcpy.gif"> </li>
+    of the Hierarchy view by using the Menu toolbar button.</li>
 </ul>
 
 <p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
