[TB] addded link to copyright pic

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-127.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-127.htm
@@ -14,7 +14,7 @@ Running a Java program</H1>
 You can run or debug (i.e., launch) your Java programs in the workbench.</P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
