--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-139.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-139.htm
@@ -14,7 +14,7 @@ Value Hovering</H1>
 When a thread is suspended and the cursor is placed over a variable in the Java editor, the value of that variable is displayed as hover help.</P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
