--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-143.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-143.htm
@@ -24,7 +24,7 @@ When a breakpoint is disabled, it will not cause threads to suspend. Disabled br
 Debugging breakpoints are displayed in the marker bar in the editor area and in the Breakpoints view.</P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
