--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
@@ -17,7 +17,7 @@ You can create and regenerate JAR files in the workbench.</P>
 <P> <a href="tasks-33.htm">Creating a new JAR file</a><br>
   <a href="tasks-36.htm">Regenerating a JAR file</a><br>
   <br>
-  <img src = ../ngibmcpy.gif border=0> </P>
+  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> </P>
 
 
 
