--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
@@ -22,6 +22,6 @@ Using the Hierarchy view</H1>
 <P><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></P>
 <p><a href="../reference/ref-24.htm">Views and editors</a></p>
-<P><img src = ../ngibmcpy.gif border=0> </P>
+<P><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> </P>
 </BODY>
 </HTML>
