--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
@@ -15,7 +15,7 @@
 <P><a href="tasks-2.htm">Showing and hiding elements</a></P>
 <P><a href="tasks-5102.htm">Moving folders, packages and files&nbsp;</a></P>
 <P><br>
-  <img src = ../ngibmcpy.gif border=0> </P>
+  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> </P>
 
 
 
