--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-48.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-48.htm
@@ -16,7 +16,7 @@ Showing version information</H1>
 The Show Version Info option can be toggled to show or hide the labels of repository version information for resources that are stored in a repository. This option is disabled (unchecked) by default.</P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
