--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-52.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-52.htm
@@ -18,7 +18,7 @@ Note:	If you want to copy rather than move, hold the Ctrl key down while draggin
 </DIV>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
