--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-55.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-55.htm
@@ -14,7 +14,7 @@ Adding Elements to Java Code</H1>
 You can add new elements to your Java code.</P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
