--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-154.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-154.htm
@@ -14,7 +14,7 @@ Using Error Reporting</H1>
 Java scrapbook errors are reported in the editor.</P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
