--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-155.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-155.htm
@@ -24,7 +24,7 @@ The method println(java.lang.String) is undefined for the type java.lang.System<
  appears in the editor at the point of the error.</P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
