--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-29.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-29.htm
@@ -14,7 +14,7 @@ Importing Java resources into the workbench</H1>
 You can import Java code to the workbench either as a single JAR file in binary form or as individual source files. </P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
