--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-8.htm
@@ -14,7 +14,7 @@ Customizing the Debugger &amp; Console</H1>
 There are several preferences that can control the debugger's appearance. </P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
