--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -46,11 +46,13 @@
   <li><a href="../guide/jdt_api_prompter.htm">How do I create a Java specific 
     prompter dialog?</a> <br>
   </li>
-  <li><a href="../guide/jdt_api_render.html">How do I present Java elements in 
+  <li><a href="../guide/jdt_api_render.htm">How do I present Java elements in 
     a standard JFace viewer?</a></li>
   <li><a href="../guide/jdt_api_write_jar_file.htm">How do I write a Jar file?</a></li>
-  <li><a href="../guide/jdt_api_new_wizard_page.htm">How to create a customized 
-    new Java element wizard page?</a><br>
+  <li><a href="../guide/jdt_api_new_wizard_page.htm">How do I create a customized 
+    new Java element wizard page?</a></li>
+  <li><a href="../guide/jdt_api_preview_manip.htm">How do I manipulate Java code 
+    with a preview in a Java editor?</a><br>
   </li>
 </ul>
  <a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" border="0">
