*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
@@ -52,7 +52,7 @@ controlling a       Java program under debug.<br>
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/core/search/package-summary.html">
   org.eclipse.jdt.core.search</a>
-    </b> supports searching the workspace Java elements that match a particular
+    </b> supports searching the workspace's Java elements that match a particular
  description.&nbsp;     <a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html"><b>
   SearchEngine</b></a>
    allows you to set up searches in the workspace. You can search for particular
