--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
@@ -29,6 +29,6 @@ Redoing a refactoring operation</h1>
 <br><a href="../reference/ref-117.htm">Refactoring wizard</a>
 <br><a href="../reference/ref-23.htm">Refactoring preferences</a>
 <br>&nbsp;
-<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </body>
 </html>
