--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
@@ -3,25 +3,18 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Creating JAR Files</title>
+<h1 CLASS="Head">
+Creating JAR Files</h1>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Creating JAR Files</H1>
-<P CLASS="Para">
-You can create and regenerate JAR files in the workbench.</P>
-<P>&nbsp;</P>
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></P>
-<P> <a href="tasks-33.htm">Creating a new JAR file</a><br>
-  <a href="tasks-36.htm">Regenerating a JAR file</a><br>
-  <br>
-  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> </P>
+<div CLASS="Para">You can create and regenerate JAR files in the workbench.</div>
 
-
-
-
-
-</BODY>
-</HTML>
+<br>&nbsp;
+<br>&nbsp;
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><a href="tasks-33.htm">Creating a new JAR file</a>
+<br><a href="tasks-36.htm">Regenerating a JAR file</a><a href="tasks-36.htm"></a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
+<br><a href="../reference/ref-export-jar.htm">JAR file exporter</a>
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
+</body>
+</html>
