--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
@@ -6,22 +6,18 @@
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Using the Hierarchy view</title>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Using the Hierarchy view</H1>
-<P>&nbsp;<br>
-  <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"> 
-</P>
-<P><a href="tasks-38.htm">Changing the appearance of the Hierarchy view</a></P>
-<P><a href="tasks-39.htm">Opening a type hierarchy on a Java elemen</a></P>
-<P><a href="tasks-40.htm">Opening a type hierarchy on the current text selection</a></P>
-<P><a href="tasks-42.htm">Opening a type hierarchy in its own perspective</a></P>
-<P><a href="tasks-43.htm">Overriding a method using the Hierarchy view</a></P>
-<P><a href="tasks-44.htm">Finding overridden methods </a></P>
-<P><img border=0 width=159 height=27 id="_x0000_i1027"
-src="../images/ngrelr.gif" alt="Related reference"></P>
-<p><a href="../reference/ref-24.htm">Views and editors</a></p>
-<P><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> </P>
-</BODY>
-</HTML>
+<p><br><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<br><a href="tasks-38.htm">Changing the appearance of the Hierarchy view</a>
+<br><a href="tasks-39.htm">Opening a type hierarchy on a Java elemen</a>
+<br><a href="tasks-40.htm">Opening a type hierarchy on the current text
+selection</a>
+<br><a href="tasks-42.htm">Opening a type hierarchy in its own perspective</a>
+<br><a href="tasks-43.htm">Overriding a method using the Hierarchy view</a>
+<br><a href="tasks-44.htm">Finding overridden methods</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
+<br><a href="../reference/ref-24.htm">Views and editors</a>
+<br><a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a>
+<br>&nbsp;
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
+</body>
+</html>
