--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
@@ -3,23 +3,16 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Using the Packages View</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Using the Package Explorer</H1>
-<P>&nbsp;</P>
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></P>
-<P><a href="tasks-47.htm">Filtering elements</a></P>
-<P><a href="tasks-2.htm">Showing and hiding elements</a></P>
-<P><a href="tasks-5102.htm">Moving folders, packages and files&nbsp;</a></P>
-<P><br>
-  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> </P>
-
-
-
-
-
-</BODY>
-</HTML>
+<h1 CLASS="Head">
+Using the Package Explorer</h1>
+&nbsp;
+<p>&nbsp;
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<br><a href="tasks-47.htm">Filtering elements</a>
+<br><a href="tasks-2.htm">Showing and hiding elements</a>
+<br><a href="tasks-5102.htm">Moving folders, packages and files</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
+<br><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
+</body>
+</html>
