*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -89,7 +89,7 @@ removed automatically as problems are resolved and the Java source is recompiled
 <p>The problem id value is set by one of the constants in <b><a href="../reference/api/org/eclipse/jdt/core/compiler/IProblem.html">
  IProblem</a>
 </b>. The problem's id is reliable, but the message is localized and therefore 
-can changed according to the default locale. The contants defined in <b><a href="../reference/api/org/eclipse/jdt/core/compiler/IProblem.html">
+can be changed according to the default locale. The contants defined in <b><a href="../reference/api/org/eclipse/jdt/core/compiler/IProblem.html">
  IProblem</a>
 </b> are self-descriptive. </p>
 <p>An implementation of <b><a href="../reference/api/org/eclipse/jdt/core/IProblemRequestor.html">
