[tb] added link to copyright pic

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
@@ -49,6 +49,6 @@
 
 </div>
 
-<p><br><img SRC="../images/ngibmcpy.gif" border=0>
+<p><br><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </body>
 </html>
