--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -37,7 +37,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
 src="../images/ngrelr.gif" alt="Related reference"></p>
   <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
     &nbsp;<br>
-    <img border=0 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+    <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
   </div>
 </body>
 </html>
