--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
@@ -54,6 +54,6 @@ the Rename refactoring wizard.</li>
 <br><a href="../reference/ref-117.htm">Refactoring wizard</a>
 <br><a href="../reference/ref-23.htm">Refactoring preferences</a>
 <br>&nbsp;
-<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </body>
 </html>
