--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
@@ -39,6 +39,6 @@ the parameter.</li>
 in the Packages View</a></li>
 </div>
 
-<p><br><img SRC="../images/ngibmcpy.gif" height=12 width=195>
+<p><br><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </body>
 </html>
