--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
@@ -45,6 +45,6 @@ Method</span></b>.</li>
 <br><a href="../reference/ref-23.htm">Refactoring preferences</a>
 <br><a href="../reference/ref-154.htm">Extract method errors</a>
 <br>&nbsp;
-<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </body>
 </html>
