--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-210.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-210.htm
@@ -6,6 +6,17 @@
 
 <body bgcolor="#FFFFFF" text="#000000">
 <h1>Running JUnit</h1>
+<p>To run a JUnit test:</p>
+<ul>
+  <li>Select the test class</li>
+  <li>Do one of the following: 
+    <ul>
+      <li>From the menu bar, select <b>Run &gt; Run as &gt; JUnit Test</b> or</li>
+      <li>On the Workbench tool bar, press the dropdown menu on the <b>Run</b> 
+        button and select <b>Run as &gt; JUnit Test</b></li>
+    </ul>
+  </li>
+</ul>
 <h1><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></h1>
 <p> <a href="tasks-207.htm">Using JUnit</a><br>
 </p>
