--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
@@ -6,9 +6,27 @@
 
 <body bgcolor="#FFFFFF" text="#000000">
 <h1>Debugging a Test Failure</h1>
-<h1><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></h1>
-<p> <a href="tasks-207.htm">Using JUnit</a><br>
+<p>In the case of a test failure you can follow these steps to debug it:</p>
+<ol>
+  <li>Double click the failure entry from the stack trace to open the corresponding 
+    file in the editor. </li>
+  <li>Set a breakpoint at the beginning of the test method. </li>
+  <li>Select the test case and execute <b>Run &gt; Debug as &gt; JUnit Test</b> 
+    from the menu bar or simply execute the test case from the launch history 
+    in the <b>Debug</b> toolbar button drop down menu. </li>
+  <li>If you have the &quot;keep alive&quot; preference option set you can fix 
+    the code and rerun the test without restarting the full test run. <br>
+    Note: to set the preference, open the Launch configuration dialog, select 
+    the lanuch configuration for your test and select the <b>Keep JUnit running 
+    after a test run when debugging</b> checkbox .</li>
+</ol>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"> 
 </p>
+<p><a href="tasks-207.htm">Using JUnit</a></p>
+<p><img src="../images/ngrelr.gif" alt="Related reference" NOSAVE border=0 height=27 width=159> 
+</p>
+<p><a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
+<p><br>
 <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> 
 </p>
 </body>
