Added doc about writing extension points

--- a/bundles/org.eclipse.platform.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.platform.doc.isv/questions/index.html
@@ -21,6 +21,7 @@ Platform Questions Index</h1>
 <ul>
   <li><a href="../guide/arch.htm">What is an extension point?&nbsp; an
     extension?</a></li>
+  <li><a href="../guide/arch_extension_points.htm">How do I create an extension point?</a></li>
   <li><a href="../reference/misc/plugin_manifest.html">What is the formal definition
     for the manifest file?</a></li>
   <li><a href="../guide/product_def_nl.htm">Where do I put translated files for
