*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
@@ -39,7 +39,7 @@ setRawClasspath</a></b> on the corresponding project's Java element, for example
 	</pre></font>
 	
 Note that there also exists a variant of <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setRawClasspath(org.eclipse.jdt.core.IClasspathEntry[], org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)">setRawClasspath</a></b>
-which lets the Java build path and the project <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#getOutputLocation()">output location</a></b> be defined at the same time.
+which lets the Java build path and the project <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#getOutputLocation()">output location</a></b> to be defined at the same time.
 
 <P>
 The Java build path is persisted into a file named '.classpath' under the project location. The purpose of this file is to provide a way to share Java build path settings with others through 
@@ -174,7 +174,7 @@ e.g. entry denoting a system class library container:
 <H2>
 Classpath resolution</H2>
 
-Due to the presence of dynamically bound entries (classpath variables and containers), JDT Core distinguishes the notion of a raw and resolved classpath. The raw classpath is the one originally
+Due to the presence of dynamically bound entries (classpath variables and containers), JDT Core distinguishes the notion of a raw versus a resolved classpath. The raw classpath is the one originally
 set on the Java project using 
 <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setRawClasspath(org.eclipse.jdt.core.IClasspathEntry[], org.eclipse.core.runtime.IProgressMonitor)">setRawClasspath</a></b>,
 and can be further queried by asking the project for
